gui-challenges.web.app/media-scroller doesn't work appropriately on Nightly
Categories
(Core :: Layout: Grid, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox-esr91 | --- | unaffected |
firefox92 | --- | unaffected |
firefox93 | --- | unaffected |
firefox94 | --- | disabled |
firefox95 | --- | disabled |
firefox96 | --- | fixed |
People
(Reporter: emilio, Assigned: sefeng)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(1 file)
Seems we're creating massively-tall grid items.
Reporter | ||
Comment 1•3 years ago
|
||
[Tracking Requested - why for this release]: Layout regression that could affect other sites.
Reporter | ||
Updated•3 years ago
|
Updated•3 years ago
|
Assignee | ||
Comment 2•3 years ago
|
||
Looking...
And the pref is only enabled in Nightly, do we still need the tracking flag?
Updated•3 years ago
|
Comment 4•3 years ago
|
||
Set release status flags based on info from the regressing bug 1591366
Updated•3 years ago
|
Assignee | ||
Comment 5•3 years ago
|
||
I don't think the status-firefox95
is correct because this feature is currently Nightly only.
Assignee | ||
Updated•3 years ago
|
Comment 6•3 years ago
|
||
The severity field is not set for this bug.
:jwatt, could you have a look please?
For more information, please visit auto_nag documentation.
Comment 7•3 years ago
|
||
Setting S3 since it's only affected on nightly builds.
Assignee | ||
Comment 8•3 years ago
|
||
The optimized code path for nested grid layout should only set the
BSize of the child frames, since this is what the optimization is
for.
Without the change, the ISize is always going to be set to 0 for
child frames which may break the layout. Sometimes, it is not
an issue because the ISize of the grid area gets updated, so
the cached measurement becomes invalid, and the ISize of the child
frame gets set to the correct one again.
Comment 11•3 years ago
|
||
bugherder |
Updated•3 years ago
|
Updated•3 years ago
|
Description
•